# bifurcation

./: Cargo.toml  README.md  thoughts.md
benches/: bench.rs
data/: test.index.20000.txt
src/: from_gfaR.rs  helper.rs  lib.rs  test.rs
