[package]
name = "bifurcation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfaR_wrapper = {git = "https://github.com/MoinSebi/gfaR_wrapper"}
log = "0.4.0"
env_logger = "0.8.4"
crossbeam-channel = "0.5.6"
crossbeam = "0.8"
chrono = "0.4"
hashbrown = "0.13.1"



[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

